--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -1,9 +1,55 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+
+	"AllowedHosts": "*",
+
+	"ReverseProxy": {
+		"Routes": {
+			"CrmRoute": {
+				"ClusterId": "CrmService",
+				"Match": { "Path": "/api/crm/{**catch-all}" },
+				"Transforms": [
+					{
+						"PathRemovePrefix": "/api/crm"
+					}
+				]
+			}
+		},
+
+		"Clusters": {
+			"CrmService": {
+				"Destinations": {
+					"CrmRoute1": {
+						"Address": "http://localhost:5055"
+					}
+				},
+
+				"HealthCheck": {
+					"Active": {
+						"Enabled": true,
+						"Interval": "00:00:10",
+						"Timeout": "00:00:03",
+						"Policy": "ConsecutiveFailures",
+						"Path": "/healthz"
+					},
+					"Passive": {
+						"Enabled": true,
+						"Policy": "TransportFailureRateHealthPolicy",
+						"ReactivationPeriod": "00:02:00"
+					}
+				},
+
+				"HttpRequest": {
+					"ActivityTimeout": "00:00:05"
+				},
+
+				"LoadBalancingPolicy": "RoundRobin"
+			}
+		}
+	}
 }
