Implementación de YARP y configuración de ReverseProxy

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -39,7 +39,7 @@
 					},
 					"Passive": {
 						"Enabled": true,
-						"Policy": "TransportFailureRateHealthPolicy",
+						"Policy": "TransportFailureRate",
 						"ReactivationPeriod": "00:02:00"
 					}
 				},
