Se agrega la configuración de autorización de Entra ID

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -8,6 +8,21 @@
 
 	"AllowedHosts": "*",
 
+	"Authentication": {
+		"EntraId": {
+			"TenantId": "38dc443b-4fc6-443e-bc67-2c4a90f59d12",
+			"Authority": "https://login.microsoftonline.com/38dc443b-4fc6-443e-bc67-2c4a90f59d12/v2.0",
+			"ValidIssuers": [
+				"https://login.microsoftonline.com/38dc443b-4fc6-443e-bc67-2c4a90f59d12/v2.0",
+				"https://sts.windows.net/38dc443b-4fc6-443e-bc67-2c4a90f59d12/"
+			],
+			"ValidAudiences": [
+				"api://23632f49-90b8-4102-8496-e07ff10bdcb6",
+				"23632f49-90b8-4102-8496-e07ff10bdcb6"
+			]
+		}
+	},
+
 	"ReverseProxy": {
 		"Routes": {
 			"CrmRoute": {
