Actualizar rutas del gateway para Auth

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -25,22 +25,24 @@
 
 	"ReverseProxy": {
 		"Routes": {
-			"CrmRoute": {
-				"ClusterId": "CrmService",
-				"Match": { "Path": "/api/crm/{**catch-all}" },
+			"AuthRoute": {
+				"ClusterId": "AuthService",
+				"Match": { "Path": "/api/auth/{**catch-all}" },
 				"Transforms": [
 					{
-						"PathRemovePrefix": "/api/crm"
+						"PathRemovePrefix": "/api/auth"
 					}
 				]
 			}
 		},
 
 		"Clusters": {
-			"CrmService": {
+
+
+			"AuthService": {
 				"Destinations": {
-					"CrmRoute1": {
-						"Address": "http://localhost:5055"
+					"AuthRoute1": {
+						"Address": "http://localhost:5001"
 					}
 				},
 
