Añadir esquema JWT 'Internal' y configurar clave de desarrollo

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -1,72 +1,76 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
-	},
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
 
-	"AllowedHosts": "*",
+  "AllowedHosts": "*",
 
-	"Authentication": {
-		"EntraId": {
-			"TenantId": "38dc443b-4fc6-443e-bc67-2c4a90f59d12",
-			"Authority": "https://login.microsoftonline.com/38dc443b-4fc6-443e-bc67-2c4a90f59d12/v2.0",
-			"ValidIssuers": [
-				"https://login.microsoftonline.com/38dc443b-4fc6-443e-bc67-2c4a90f59d12/v2.0",
-				"https://sts.windows.net/38dc443b-4fc6-443e-bc67-2c4a90f59d12/"
-			],
-			"ValidAudiences": [
-				"api://23632f49-90b8-4102-8496-e07ff10bdcb6",
-				"23632f49-90b8-4102-8496-e07ff10bdcb6"
-			]
-		}
-	},
+  "Authentication": {
+    "EntraId": {
+      "TenantId": "38dc443b-4fc6-443e-bc67-2c4a90f59d12",
+      "Authority": "https://login.microsoftonline.com/38dc443b-4fc6-443e-bc67-2c4a90f59d12/v2.0",
+      "ValidIssuers": [
+        "https://login.microsoftonline.com/38dc443b-4fc6-443e-bc67-2c4a90f59d12/v2.0",
+        "https://sts.windows.net/38dc443b-4fc6-443e-bc67-2c4a90f59d12/"
+      ],
+      "ValidAudiences": [
+        "api://23632f49-90b8-4102-8496-e07ff10bdcb6",
+        "23632f49-90b8-4102-8496-e07ff10bdcb6"
+      ]
+    }
+  },
 
-	"ReverseProxy": {
-		"Routes": {
-			"AuthRoute": {
-				"ClusterId": "AuthService",
-				"Match": { "Path": "/api/auth/{**catch-all}" },
-				"Transforms": [
-					{
-						"PathRemovePrefix": "/api/auth"
-					}
-				]
-			}
-		},
+  "Jwt": {
+    "SigningKeyBase64": "18M+6AdtZsl0l5aSozOHAygexdBKO1wFWEGA//RFKdc=",
+    "Issuer": "simplecrm-auth-service",
+    "Audience": "simplecrm-services"
+  },
 
-		"Clusters": {
+  "ReverseProxy": {
+    "Routes": {
+      "AuthRoute": {
+        "ClusterId": "AuthService",
+        "Match": { "Path": "/api/auth/{**catch-all}" },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/api/auth"
+          }
+        ]
+      }
+    },
 
+    "Clusters": {
+      "AuthService": {
+        "Destinations": {
+          "AuthRoute1": {
+            "Address": "http://localhost:5001"
+          }
+        },
 
-			"AuthService": {
-				"Destinations": {
-					"AuthRoute1": {
-						"Address": "http://localhost:5001"
-					}
-				},
+        "HealthCheck": {
+          "Active": {
+            "Enabled": true,
+            "Interval": "00:00:10",
+            "Timeout": "00:00:03",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/healthz"
+          },
+          "Passive": {
+            "Enabled": true,
+            "Policy": "TransportFailureRate",
+            "ReactivationPeriod": "00:02:00"
+          }
+        },
 
-				"HealthCheck": {
-					"Active": {
-						"Enabled": true,
-						"Interval": "00:00:10",
-						"Timeout": "00:00:03",
-						"Policy": "ConsecutiveFailures",
-						"Path": "/healthz"
-					},
-					"Passive": {
-						"Enabled": true,
-						"Policy": "TransportFailureRate",
-						"ReactivationPeriod": "00:02:00"
-					}
-				},
+        "HttpRequest": {
+          "ActivityTimeout": "00:00:05"
+        },
 
-				"HttpRequest": {
-					"ActivityTimeout": "00:00:05"
-				},
-
-				"LoadBalancingPolicy": "RoundRobin"
-			}
-		}
-	}
+        "LoadBalancingPolicy": "RoundRobin"
+      }
+    }
+  }
 }
